openshift/sample/6_sample-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fsw-sample-app
  labels:
    app: fsw-sample-app
    app.kubernetes.io/part-of: fsw-sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: sample-app
          image: ghcr.io/utrechtuniversity/fsw-openshift:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fsw-sample-app
  labels:
    app: fsw-sample-app
    app.kubernetes.io/part-of: fsw-sample-app
spec:
  selector:
    app: fsw-sample-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
