openshift/sample/7_sample-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fsw-sample-app
  labels:
    app: fsw-sample-app
    app.kubernetes.io/part-of: fsw-sample-app
spec:
  selector:
    app: fsw-sample-app
  ports:
    - port: 9000
      targetPort: 9000
