openshift/sample/8_sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: uu-0219959
  annotations:
    cert-manager.io/cluster-issuer: sectigo
spec:
  tls:
    - hosts:
        - app.openshift.fss.uu.nl
      secretName: sample-app-tls
  rules:
    - host: app.openshift.fss.uu.nl  # Replace with your desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
